parser.output
Grammar

    0 $accept: programa $end

    1 programa: lista_declaraciones

    2 lista_declaraciones: lista_declaraciones declaracion
    3                    | declaracion

    4 declaracion: ID ASSIGN exp EOL
    5            | exp EOL
    6            | ONELINECMNT
    7            | MULTILINECMNT

    8 exp: aritmetica
    9    | booleana

   10 aritmetica: termino
   11           | aritmetica ADD termino
   12           | aritmetica SUB termino
   13           | SUB termino
   14           | ADD termino

   15 termino: factor
   16        | termino MULT factor
   17        | termino DIV factor
   18        | termino MOD factor

   19 factor: primario
   20       | factor POW primario

   21 primario: INTEGER
   22         | FLOAT
   23         | STRING
   24         | ID
   25         | A_ID
   26         | LPAREN aritmetica RPAREN
   27         | op_trig LPAREN aritmetica RPAREN

   28 op_trig: SIN
   29        | COS
   30        | TAN

   31 booleana: bool1
   32         | booleana OR bool1

   33 bool1: bool2
   34      | bool1 AND bool2

   35 bool2: bool3
   36      | NOT bool2

   37 bool3: bool_aritmetic
   38      | LPAREN booleana RPAREN
   39      | BOOLEAN
   40      | B_ID

   41 bool_aritmetic: aritmetica OPRELACIONAL aritmetica


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ASSIGN (258) 4
    ONELINECMNT (259) 6
    MULTILINECMNT (260) 7
    EOL (261) 4 5
    ID <expr_val> (262) 4 24
    A_ID <expr_val> (263) 25
    B_ID <expr_val> (264) 40
    INTEGER <expr_val> (265) 21
    FLOAT <expr_val> (266) 22
    STRING <expr_val> (267) 23
    BOOLEAN <expr_val> (268) 39
    ADD <expr_val> (269) 11 14
    SUB <expr_val> (270) 12 13
    MULT <expr_val> (271) 16
    DIV <expr_val> (272) 17
    MOD <expr_val> (273) 18
    POW <expr_val> (274) 20
    SIN <expr_val> (275) 28
    COS <expr_val> (276) 29
    TAN <expr_val> (277) 30
    AND <expr_val> (278) 34
    OR <expr_val> (279) 32
    NOT <expr_val> (280) 36
    OPRELACIONAL <expr_val> (281) 41
    LPAREN <expr_val> (282) 26 27 38
    RPAREN <expr_val> (283) 26 27 38


Nonterminals, with rules where they appear

    $accept (29)
        on left: 0
    programa (30)
        on left: 1
        on right: 0
    lista_declaraciones <expr_val> (31)
        on left: 2 3
        on right: 1 2
    declaracion <expr_val> (32)
        on left: 4 5 6 7
        on right: 2 3
    exp <expr_val> (33)
        on left: 8 9
        on right: 4 5
    aritmetica <expr_val> (34)
        on left: 10 11 12 13 14
        on right: 8 11 12 26 27 41
    termino <expr_val> (35)
        on left: 15 16 17 18
        on right: 10 11 12 13 14 16 17 18
    factor <expr_val> (36)
        on left: 19 20
        on right: 15 16 17 18 20
    primario <expr_val> (37)
        on left: 21 22 23 24 25 26 27
        on right: 19 20
    op_trig <expr_val> (38)
        on left: 28 29 30
        on right: 27
    booleana <expr_val> (39)
        on left: 31 32
        on right: 9 32 38
    bool1 <expr_val> (40)
        on left: 33 34
        on right: 31 32 34
    bool2 <expr_val> (41)
        on left: 35 36
        on right: 33 34 36
    bool3 <expr_val> (42)
        on left: 37 38 39 40
        on right: 35
    bool_aritmetic <expr_val> (43)
        on left: 41
        on right: 37


State 0

    0 $accept: • programa $end

    ONELINECMNT    shift, and go to state 1
    MULTILINECMNT  shift, and go to state 2
    ID             shift, and go to state 3
    A_ID           shift, and go to state 4
    B_ID           shift, and go to state 5
    INTEGER        shift, and go to state 6
    FLOAT          shift, and go to state 7
    STRING         shift, and go to state 8
    BOOLEAN        shift, and go to state 9
    ADD            shift, and go to state 10
    SUB            shift, and go to state 11
    SIN            shift, and go to state 12
    COS            shift, and go to state 13
    TAN            shift, and go to state 14
    NOT            shift, and go to state 15
    LPAREN         shift, and go to state 16

    programa             go to state 17
    lista_declaraciones  go to state 18
    declaracion          go to state 19
    exp                  go to state 20
    aritmetica           go to state 21
    termino              go to state 22
    factor               go to state 23
    primario             go to state 24
    op_trig              go to state 25
    booleana             go to state 26
    bool1                go to state 27
    bool2                go to state 28
    bool3                go to state 29
    bool_aritmetic       go to state 30


State 1

    6 declaracion: ONELINECMNT •

    $default  reduce using rule 6 (declaracion)


State 2

    7 declaracion: MULTILINECMNT •

    $default  reduce using rule 7 (declaracion)


State 3

    4 declaracion: ID • ASSIGN exp EOL
   24 primario: ID •

    ASSIGN  shift, and go to state 31

    $default  reduce using rule 24 (primario)


State 4

   25 primario: A_ID •

    $default  reduce using rule 25 (primario)


State 5

   40 bool3: B_ID •

    $default  reduce using rule 40 (bool3)


State 6

   21 primario: INTEGER •

    $default  reduce using rule 21 (primario)


State 7

   22 primario: FLOAT •

    $default  reduce using rule 22 (primario)


State 8

   23 primario: STRING •

    $default  reduce using rule 23 (primario)


State 9

   39 bool3: BOOLEAN •

    $default  reduce using rule 39 (bool3)


State 10

   14 aritmetica: ADD • termino

    ID       shift, and go to state 32
    A_ID     shift, and go to state 4
    INTEGER  shift, and go to state 6
    FLOAT    shift, and go to state 7
    STRING   shift, and go to state 8
    SIN      shift, and go to state 12
    COS      shift, and go to state 13
    TAN      shift, and go to state 14
    LPAREN   shift, and go to state 33

    termino   go to state 34
    factor    go to state 23
    primario  go to state 24
    op_trig   go to state 25


State 11

   13 aritmetica: SUB • termino

    ID       shift, and go to state 32
    A_ID     shift, and go to state 4
    INTEGER  shift, and go to state 6
    FLOAT    shift, and go to state 7
    STRING   shift, and go to state 8
    SIN      shift, and go to state 12
    COS      shift, and go to state 13
    TAN      shift, and go to state 14
    LPAREN   shift, and go to state 33

    termino   go to state 35
    factor    go to state 23
    primario  go to state 24
    op_trig   go to state 25


State 12

   28 op_trig: SIN •

    $default  reduce using rule 28 (op_trig)


State 13

   29 op_trig: COS •

    $default  reduce using rule 29 (op_trig)


State 14

   30 op_trig: TAN •

    $default  reduce using rule 30 (op_trig)


State 15

   36 bool2: NOT • bool2

    ID       shift, and go to state 32
    A_ID     shift, and go to state 4
    B_ID     shift, and go to state 5
    INTEGER  shift, and go to state 6
    FLOAT    shift, and go to state 7
    STRING   shift, and go to state 8
    BOOLEAN  shift, and go to state 9
    ADD      shift, and go to state 10
    SUB      shift, and go to state 11
    SIN      shift, and go to state 12
    COS      shift, and go to state 13
    TAN      shift, and go to state 14
    NOT      shift, and go to state 15
    LPAREN   shift, and go to state 16

    aritmetica      go to state 36
    termino         go to state 22
    factor          go to state 23
    primario        go to state 24
    op_trig         go to state 25
    bool2           go to state 37
    bool3           go to state 29
    bool_aritmetic  go to state 30


State 16

   26 primario: LPAREN • aritmetica RPAREN
   38 bool3: LPAREN • booleana RPAREN

    ID       shift, and go to state 32
    A_ID     shift, and go to state 4
    B_ID     shift, and go to state 5
    INTEGER  shift, and go to state 6
    FLOAT    shift, and go to state 7
    STRING   shift, and go to state 8
    BOOLEAN  shift, and go to state 9
    ADD      shift, and go to state 10
    SUB      shift, and go to state 11
    SIN      shift, and go to state 12
    COS      shift, and go to state 13
    TAN      shift, and go to state 14
    NOT      shift, and go to state 15
    LPAREN   shift, and go to state 16

    aritmetica      go to state 38
    termino         go to state 22
    factor          go to state 23
    primario        go to state 24
    op_trig         go to state 25
    booleana        go to state 39
    bool1           go to state 27
    bool2           go to state 28
    bool3           go to state 29
    bool_aritmetic  go to state 30


State 17

    0 $accept: programa • $end

    $end  shift, and go to state 40


State 18

    1 programa: lista_declaraciones •
    2 lista_declaraciones: lista_declaraciones • declaracion

    ONELINECMNT    shift, and go to state 1
    MULTILINECMNT  shift, and go to state 2
    ID             shift, and go to state 3
    A_ID           shift, and go to state 4
    B_ID           shift, and go to state 5
    INTEGER        shift, and go to state 6
    FLOAT          shift, and go to state 7
    STRING         shift, and go to state 8
    BOOLEAN        shift, and go to state 9
    ADD            shift, and go to state 10
    SUB            shift, and go to state 11
    SIN            shift, and go to state 12
    COS            shift, and go to state 13
    TAN            shift, and go to state 14
    NOT            shift, and go to state 15
    LPAREN         shift, and go to state 16

    $default  reduce using rule 1 (programa)

    declaracion     go to state 41
    exp             go to state 20
    aritmetica      go to state 21
    termino         go to state 22
    factor          go to state 23
    primario        go to state 24
    op_trig         go to state 25
    booleana        go to state 26
    bool1           go to state 27
    bool2           go to state 28
    bool3           go to state 29
    bool_aritmetic  go to state 30


State 19

    3 lista_declaraciones: declaracion •

    $default  reduce using rule 3 (lista_declaraciones)


State 20

    5 declaracion: exp • EOL

    EOL  shift, and go to state 42


State 21

    8 exp: aritmetica •
   11 aritmetica: aritmetica • ADD termino
   12           | aritmetica • SUB termino
   41 bool_aritmetic: aritmetica • OPRELACIONAL aritmetica

    ADD           shift, and go to state 43
    SUB           shift, and go to state 44
    OPRELACIONAL  shift, and go to state 45

    $default  reduce using rule 8 (exp)


State 22

   10 aritmetica: termino •
   16 termino: termino • MULT factor
   17        | termino • DIV factor
   18        | termino • MOD factor

    MULT  shift, and go to state 46
    DIV   shift, and go to state 47
    MOD   shift, and go to state 48

    $default  reduce using rule 10 (aritmetica)


State 23

   15 termino: factor •
   20 factor: factor • POW primario

    POW  shift, and go to state 49

    $default  reduce using rule 15 (termino)


State 24

   19 factor: primario •

    $default  reduce using rule 19 (factor)


State 25

   27 primario: op_trig • LPAREN aritmetica RPAREN

    LPAREN  shift, and go to state 50


State 26

    9 exp: booleana •
   32 booleana: booleana • OR bool1

    OR  shift, and go to state 51

    $default  reduce using rule 9 (exp)


State 27

   31 booleana: bool1 •
   34 bool1: bool1 • AND bool2

    AND  shift, and go to state 52

    $default  reduce using rule 31 (booleana)


State 28

   33 bool1: bool2 •

    $default  reduce using rule 33 (bool1)


State 29

   35 bool2: bool3 •

    $default  reduce using rule 35 (bool2)


State 30

   37 bool3: bool_aritmetic •

    $default  reduce using rule 37 (bool3)


State 31

    4 declaracion: ID ASSIGN • exp EOL

    ID       shift, and go to state 32
    A_ID     shift, and go to state 4
    B_ID     shift, and go to state 5
    INTEGER  shift, and go to state 6
    FLOAT    shift, and go to state 7
    STRING   shift, and go to state 8
    BOOLEAN  shift, and go to state 9
    ADD      shift, and go to state 10
    SUB      shift, and go to state 11
    SIN      shift, and go to state 12
    COS      shift, and go to state 13
    TAN      shift, and go to state 14
    NOT      shift, and go to state 15
    LPAREN   shift, and go to state 16

    exp             go to state 53
    aritmetica      go to state 21
    termino         go to state 22
    factor          go to state 23
    primario        go to state 24
    op_trig         go to state 25
    booleana        go to state 26
    bool1           go to state 27
    bool2           go to state 28
    bool3           go to state 29
    bool_aritmetic  go to state 30


State 32

   24 primario: ID •

    $default  reduce using rule 24 (primario)


State 33

   26 primario: LPAREN • aritmetica RPAREN

    ID       shift, and go to state 32
    A_ID     shift, and go to state 4
    INTEGER  shift, and go to state 6
    FLOAT    shift, and go to state 7
    STRING   shift, and go to state 8
    ADD      shift, and go to state 10
    SUB      shift, and go to state 11
    SIN      shift, and go to state 12
    COS      shift, and go to state 13
    TAN      shift, and go to state 14
    LPAREN   shift, and go to state 33

    aritmetica  go to state 54
    termino     go to state 22
    factor      go to state 23
    primario    go to state 24
    op_trig     go to state 25


State 34

   14 aritmetica: ADD termino •
   16 termino: termino • MULT factor
   17        | termino • DIV factor
   18        | termino • MOD factor

    MULT  shift, and go to state 46
    DIV   shift, and go to state 47
    MOD   shift, and go to state 48

    $default  reduce using rule 14 (aritmetica)


State 35

   13 aritmetica: SUB termino •
   16 termino: termino • MULT factor
   17        | termino • DIV factor
   18        | termino • MOD factor

    MULT  shift, and go to state 46
    DIV   shift, and go to state 47
    MOD   shift, and go to state 48

    $default  reduce using rule 13 (aritmetica)


State 36

   11 aritmetica: aritmetica • ADD termino
   12           | aritmetica • SUB termino
   41 bool_aritmetic: aritmetica • OPRELACIONAL aritmetica

    ADD           shift, and go to state 43
    SUB           shift, and go to state 44
    OPRELACIONAL  shift, and go to state 45


State 37

   36 bool2: NOT bool2 •

    $default  reduce using rule 36 (bool2)


State 38

   11 aritmetica: aritmetica • ADD termino
   12           | aritmetica • SUB termino
   26 primario: LPAREN aritmetica • RPAREN
   41 bool_aritmetic: aritmetica • OPRELACIONAL aritmetica

    ADD           shift, and go to state 43
    SUB           shift, and go to state 44
    OPRELACIONAL  shift, and go to state 45
    RPAREN        shift, and go to state 55


State 39

   32 booleana: booleana • OR bool1
   38 bool3: LPAREN booleana • RPAREN

    OR      shift, and go to state 51
    RPAREN  shift, and go to state 56


State 40

    0 $accept: programa $end •

    $default  accept


State 41

    2 lista_declaraciones: lista_declaraciones declaracion •

    $default  reduce using rule 2 (lista_declaraciones)


State 42

    5 declaracion: exp EOL •

    $default  reduce using rule 5 (declaracion)


State 43

   11 aritmetica: aritmetica ADD • termino

    ID       shift, and go to state 32
    A_ID     shift, and go to state 4
    INTEGER  shift, and go to state 6
    FLOAT    shift, and go to state 7
    STRING   shift, and go to state 8
    SIN      shift, and go to state 12
    COS      shift, and go to state 13
    TAN      shift, and go to state 14
    LPAREN   shift, and go to state 33

    termino   go to state 57
    factor    go to state 23
    primario  go to state 24
    op_trig   go to state 25


State 44

   12 aritmetica: aritmetica SUB • termino

    ID       shift, and go to state 32
    A_ID     shift, and go to state 4
    INTEGER  shift, and go to state 6
    FLOAT    shift, and go to state 7
    STRING   shift, and go to state 8
    SIN      shift, and go to state 12
    COS      shift, and go to state 13
    TAN      shift, and go to state 14
    LPAREN   shift, and go to state 33

    termino   go to state 58
    factor    go to state 23
    primario  go to state 24
    op_trig   go to state 25


State 45

   41 bool_aritmetic: aritmetica OPRELACIONAL • aritmetica

    ID       shift, and go to state 32
    A_ID     shift, and go to state 4
    INTEGER  shift, and go to state 6
    FLOAT    shift, and go to state 7
    STRING   shift, and go to state 8
    ADD      shift, and go to state 10
    SUB      shift, and go to state 11
    SIN      shift, and go to state 12
    COS      shift, and go to state 13
    TAN      shift, and go to state 14
    LPAREN   shift, and go to state 33

    aritmetica  go to state 59
    termino     go to state 22
    factor      go to state 23
    primario    go to state 24
    op_trig     go to state 25


State 46

   16 termino: termino MULT • factor

    ID       shift, and go to state 32
    A_ID     shift, and go to state 4
    INTEGER  shift, and go to state 6
    FLOAT    shift, and go to state 7
    STRING   shift, and go to state 8
    SIN      shift, and go to state 12
    COS      shift, and go to state 13
    TAN      shift, and go to state 14
    LPAREN   shift, and go to state 33

    factor    go to state 60
    primario  go to state 24
    op_trig   go to state 25


State 47

   17 termino: termino DIV • factor

    ID       shift, and go to state 32
    A_ID     shift, and go to state 4
    INTEGER  shift, and go to state 6
    FLOAT    shift, and go to state 7
    STRING   shift, and go to state 8
    SIN      shift, and go to state 12
    COS      shift, and go to state 13
    TAN      shift, and go to state 14
    LPAREN   shift, and go to state 33

    factor    go to state 61
    primario  go to state 24
    op_trig   go to state 25


State 48

   18 termino: termino MOD • factor

    ID       shift, and go to state 32
    A_ID     shift, and go to state 4
    INTEGER  shift, and go to state 6
    FLOAT    shift, and go to state 7
    STRING   shift, and go to state 8
    SIN      shift, and go to state 12
    COS      shift, and go to state 13
    TAN      shift, and go to state 14
    LPAREN   shift, and go to state 33

    factor    go to state 62
    primario  go to state 24
    op_trig   go to state 25


State 49

   20 factor: factor POW • primario

    ID       shift, and go to state 32
    A_ID     shift, and go to state 4
    INTEGER  shift, and go to state 6
    FLOAT    shift, and go to state 7
    STRING   shift, and go to state 8
    SIN      shift, and go to state 12
    COS      shift, and go to state 13
    TAN      shift, and go to state 14
    LPAREN   shift, and go to state 33

    primario  go to state 63
    op_trig   go to state 25


State 50

   27 primario: op_trig LPAREN • aritmetica RPAREN

    ID       shift, and go to state 32
    A_ID     shift, and go to state 4
    INTEGER  shift, and go to state 6
    FLOAT    shift, and go to state 7
    STRING   shift, and go to state 8
    ADD      shift, and go to state 10
    SUB      shift, and go to state 11
    SIN      shift, and go to state 12
    COS      shift, and go to state 13
    TAN      shift, and go to state 14
    LPAREN   shift, and go to state 33

    aritmetica  go to state 64
    termino     go to state 22
    factor      go to state 23
    primario    go to state 24
    op_trig     go to state 25


State 51

   32 booleana: booleana OR • bool1

    ID       shift, and go to state 32
    A_ID     shift, and go to state 4
    B_ID     shift, and go to state 5
    INTEGER  shift, and go to state 6
    FLOAT    shift, and go to state 7
    STRING   shift, and go to state 8
    BOOLEAN  shift, and go to state 9
    ADD      shift, and go to state 10
    SUB      shift, and go to state 11
    SIN      shift, and go to state 12
    COS      shift, and go to state 13
    TAN      shift, and go to state 14
    NOT      shift, and go to state 15
    LPAREN   shift, and go to state 16

    aritmetica      go to state 36
    termino         go to state 22
    factor          go to state 23
    primario        go to state 24
    op_trig         go to state 25
    bool1           go to state 65
    bool2           go to state 28
    bool3           go to state 29
    bool_aritmetic  go to state 30


State 52

   34 bool1: bool1 AND • bool2

    ID       shift, and go to state 32
    A_ID     shift, and go to state 4
    B_ID     shift, and go to state 5
    INTEGER  shift, and go to state 6
    FLOAT    shift, and go to state 7
    STRING   shift, and go to state 8
    BOOLEAN  shift, and go to state 9
    ADD      shift, and go to state 10
    SUB      shift, and go to state 11
    SIN      shift, and go to state 12
    COS      shift, and go to state 13
    TAN      shift, and go to state 14
    NOT      shift, and go to state 15
    LPAREN   shift, and go to state 16

    aritmetica      go to state 36
    termino         go to state 22
    factor          go to state 23
    primario        go to state 24
    op_trig         go to state 25
    bool2           go to state 66
    bool3           go to state 29
    bool_aritmetic  go to state 30


State 53

    4 declaracion: ID ASSIGN exp • EOL

    EOL  shift, and go to state 67


State 54

   11 aritmetica: aritmetica • ADD termino
   12           | aritmetica • SUB termino
   26 primario: LPAREN aritmetica • RPAREN

    ADD     shift, and go to state 43
    SUB     shift, and go to state 44
    RPAREN  shift, and go to state 55


State 55

   26 primario: LPAREN aritmetica RPAREN •

    $default  reduce using rule 26 (primario)


State 56

   38 bool3: LPAREN booleana RPAREN •

    $default  reduce using rule 38 (bool3)


State 57

   11 aritmetica: aritmetica ADD termino •
   16 termino: termino • MULT factor
   17        | termino • DIV factor
   18        | termino • MOD factor

    MULT  shift, and go to state 46
    DIV   shift, and go to state 47
    MOD   shift, and go to state 48

    $default  reduce using rule 11 (aritmetica)


State 58

   12 aritmetica: aritmetica SUB termino •
   16 termino: termino • MULT factor
   17        | termino • DIV factor
   18        | termino • MOD factor

    MULT  shift, and go to state 46
    DIV   shift, and go to state 47
    MOD   shift, and go to state 48

    $default  reduce using rule 12 (aritmetica)


State 59

   11 aritmetica: aritmetica • ADD termino
   12           | aritmetica • SUB termino
   41 bool_aritmetic: aritmetica OPRELACIONAL aritmetica •

    ADD  shift, and go to state 43
    SUB  shift, and go to state 44

    $default  reduce using rule 41 (bool_aritmetic)


State 60

   16 termino: termino MULT factor •
   20 factor: factor • POW primario

    POW  shift, and go to state 49

    $default  reduce using rule 16 (termino)


State 61

   17 termino: termino DIV factor •
   20 factor: factor • POW primario

    POW  shift, and go to state 49

    $default  reduce using rule 17 (termino)


State 62

   18 termino: termino MOD factor •
   20 factor: factor • POW primario

    POW  shift, and go to state 49

    $default  reduce using rule 18 (termino)


State 63

   20 factor: factor POW primario •

    $default  reduce using rule 20 (factor)


State 64

   11 aritmetica: aritmetica • ADD termino
   12           | aritmetica • SUB termino
   27 primario: op_trig LPAREN aritmetica • RPAREN

    ADD     shift, and go to state 43
    SUB     shift, and go to state 44
    RPAREN  shift, and go to state 68


State 65

   32 booleana: booleana OR bool1 •
   34 bool1: bool1 • AND bool2

    AND  shift, and go to state 52

    $default  reduce using rule 32 (booleana)


State 66

   34 bool1: bool1 AND bool2 •

    $default  reduce using rule 34 (bool1)


State 67

    4 declaracion: ID ASSIGN exp EOL •

    $default  reduce using rule 4 (declaracion)


State 68

   27 primario: op_trig LPAREN aritmetica RPAREN •

    $default  reduce using rule 27 (primario)
